完善所有界面的注释，美化界面，添加更好看的图标

--- a/res/drawable-hdpi/selector_item.xml
+++ b/res/drawable-hdpi/selector_item.xml
@@ -3,5 +3,6 @@
 
     <item android:drawable="@color/LightGray" android:state_pressed="true"></item>
     <item android:drawable="@color/LightGray" android:state_selected="true"></item>
+    <item android:drawable="@color/white"></item>
 
 </selector>
