--- a/res/layout/derivative1.xml
+++ b/res/layout/derivative1.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
+            android:layout_marginLeft="5dip"
             android:background="@drawable/common_btn_selector" />
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="13dp"
             android:background="@drawable/btn_back" />
 
         <TextView
@@ -66,13 +66,20 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp" >
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="请选择："
+                android:textColor="@color/tip" />
+
             <RadioGroup
                 android:id="@+id/Button1_radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
-                android:orientation="horizontal" >
+                android:background="@drawable/shape_bg"
+                android:orientation="horizontal"
+                android:paddingLeft="2dp" >
 
                 <RadioButton
                     android:id="@+id/Button1_radioButton1"
@@ -91,15 +98,22 @@
                     android:textColor="@android:color/black" />
             </RadioGroup>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="请输入数据："
+                android:textColor="@color/tip" />
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape" >
+                android:background="@drawable/shape_bg" >
 
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingRight="5dp"
                     android:paddingTop="5dp" >
 
                     <TextView
@@ -135,7 +149,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content"
+                    android:paddingRight="5dp" >
 
                     <TextView
                         android:layout_width="91dp"
@@ -194,20 +209,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
+                android:background="@drawable/shape_bg"
                 android:padding="8dp"
-                android:text="功能介绍：\n先选择“认购期权理论价格”或者“认沽期权理论价格”，然后输入相应的数据就可以进行计算"
-                android:textColor="#1E90FF"
-                android:textSize="18sp" />
+                android:text="计算结果：\n"
+                android:textColor="@color/result"
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/Button1_calculate_bt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:background="@drawable/common_btn_selector"
                 android:padding="8dp"
                 android:text="计算"
-                android:textColor="@android:color/black"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
