--- a/res/layout/derivative2.xml
+++ b/res/layout/derivative2.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -66,13 +66,20 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp" >
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="请选择："
+                android:textColor="@color/tip" />
+
             <RadioGroup
-                 android:id="@+id/Button2_radioGroup1"
+                android:id="@+id/Button2_radioGroup1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
-                android:orientation="horizontal" >
+                android:background="@drawable/shape_bg"
+                android:orientation="horizontal"
+                android:paddingLeft="2dp" >
 
                 <RadioButton
                     android:id="@+id/Button2_radioButton1"
@@ -96,8 +103,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
-                android:orientation="vertical" >
+                android:background="@drawable/shape_bg"
+                android:orientation="vertical"
+                android:paddingLeft="2dp" >
 
                 <RadioButton
                     android:id="@+id/Button2_radioButton3"
@@ -124,20 +132,27 @@
                     android:textColor="@android:color/black" />
             </RadioGroup>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="请输入数据："
+                android:textColor="@color/tip" />
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape" >
+                android:background="@drawable/shape_bg" >
 
                 <TableRow
                     android:id="@+id/Button2_tableRow1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingRight="5dp"
                     android:paddingTop="5dp" >
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="75dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
@@ -148,7 +163,7 @@
                     <EditText
                         android:id="@+id/Button2_editText1"
                         android:layout_width="70dp"
-                        android:layout_height="wrap_content" 
+                        android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
 
                     <TextView
@@ -163,7 +178,7 @@
                     <EditText
                         android:id="@+id/Button2_editText2"
                         android:layout_width="70dp"
-                        android:layout_height="wrap_content" 
+                        android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
                 </TableRow>
 
@@ -171,10 +186,10 @@
                     android:id="@+id/Button2_tableRow2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                     >
+                    android:paddingRight="5dp" >
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="75dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
@@ -185,7 +200,7 @@
                     <EditText
                         android:id="@+id/Button2_editText3"
                         android:layout_width="70dp"
-                        android:layout_height="wrap_content" 
+                        android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
 
                     <TextView
@@ -200,18 +215,17 @@
                     <EditText
                         android:id="@+id/Button2_editText4"
                         android:layout_width="70dp"
-                        android:layout_height="wrap_content" 
+                        android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
                 </TableRow>
 
                 <TableRow
                     android:id="@+id/Button2_tableRow3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content" >
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="75dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
@@ -222,7 +236,7 @@
                     <EditText
                         android:id="@+id/Button2_editText5"
                         android:layout_width="70dp"
-                        android:layout_height="wrap_content" 
+                        android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
                 </TableRow>
             </TableLayout>
@@ -232,20 +246,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
+                android:background="@drawable/shape_bg"
                 android:padding="8dp"
-                android:text="功能介绍：\n先选择，然后输入相应的数据就可以进行计算"
-                android:textColor="#1E90FF"
-                android:textSize="18sp" />
+                android:text="计算结果：\n"
+                android:textColor="@color/result"
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/Button2_calculate_bt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/common_btn_selector"
                 android:padding="8dp"
                 android:text="计算"
-                android:textColor="@android:color/black"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
