--- a/res/layout/derivative3.xml
+++ b/res/layout/derivative3.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
+            android:layout_marginLeft="5dip"
             android:background="@drawable/common_btn_selector" />
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="13dp"
             android:background="@drawable/btn_back" />
 
         <TextView
@@ -74,7 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/shape"
+                    android:background="@drawable/shape_bg"
                     android:paddingRight="5dp" >
 
                     <TableRow
@@ -290,11 +290,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/shape"
+                    android:background="@drawable/shape_bg"
                     android:padding="8dp"
                     android:text="功能介绍：\n先选择产品类型，\n然后才可以输入相应的数据"
-                    android:textColor="#1E90FF"
-                    android:textSize="18sp" />
+                    android:textColor="@color/result"
+                    android:textSize="16sp" />
 
                 <TableLayout
                     android:layout_width="match_parent"
@@ -303,31 +303,34 @@
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" >
+
                         <Button
-                    android:id="@+id/Button3_calculate_bt"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:padding="8dp"
-                    android:text="计算"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" /> 
-                     <Button
-                    android:id="@+id/Button3_show_bt"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:padding="8dp"
-                    android:text="显示图表"
-                    android:visibility="gone"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
+                            android:id="@+id/Button3_calculate_bt"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/common_btn_selector"
+                            android:layout_marginRight="5dp"
+                            android:padding="8dp"
+                            android:text="计算"
+                            android:textColor="@color/white"
+                            android:textSize="18sp" />
+
+                        <Button
+                            android:id="@+id/Button3_show_bt"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/common_btn_selector"
+                            android:padding="8dp"
+                            android:text="显示图表"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"
+                            android:visibility="gone" />
                     </TableRow>
                 </TableLayout>
-
-               
             </LinearLayout>
         </ScrollView>
     </HorizontalScrollView>
