--- a/res/layout/derivative5.xml
+++ b/res/layout/derivative5.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
+            android:layout_marginLeft="5dp"
             android:background="@drawable/common_btn_selector" />
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="13dp"
             android:background="@drawable/btn_back" />
 
         <TextView
@@ -66,11 +66,17 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp" >
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="请输入数据："
+                android:textColor="@color/tip" />
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape" >
+                android:background="@drawable/shape_bg" >
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -161,7 +167,6 @@
                         android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
-
                 </TableRow>
             </TableLayout>
 
@@ -170,20 +175,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
+                android:background="@drawable/shape_bg"
                 android:padding="8dp"
-                android:text="功能介绍：\n输入相应的数据就可以进行计算"
-                android:textColor="#1E90FF"
-                android:textSize="18sp" />
+                android:text="计算结果：\n\n"
+                android:textColor="@color/result"
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/Button5_calculate_bt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:background="@drawable/common_btn_selector"
                 android:padding="8dp"
                 android:text="计算"
-                android:textColor="@android:color/black"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
