--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -33,10 +33,10 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/shape"
+            android:background="@drawable/shape_bg"
             android:padding="8dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:text="理念介绍"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
