--- a/res/layout/question.xml
+++ b/res/layout/question.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -41,10 +41,12 @@
     <ListView
         android:id="@+id/question_listview"
         android:layout_width="match_parent"
-        android:divider="@android:color/darker_gray" 
-        android:dividerHeight="0.5dp"
-        android:cacheColorHint="#00000000" 
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:background="@drawable/shape_bg"
+        android:layout_margin="8dp"
+        android:cacheColorHint="#00000000"
+        android:divider="@drawable/shape_line"
+        android:dividerHeight="0.75dp" >
     </ListView>
 
 </LinearLayout>
