--- a/res/layout/question_item.xml
+++ b/res/layout/question_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/TextView"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"	
-	android:padding="8dp"
-	android:text="111"
-	android:cacheColorHint="#00000000"
-	android:textColor="@android:color/black"
-	android:textSize="18sp"/>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/TextView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/selector_item"
+    android:cacheColorHint="#00000000"
+    android:padding="8dp"
+    android:text="111"
+    android:textColor="@android:color/black"
+    android:textSize="18sp" />
