--- a/res/layout/sortlistview_item.xml
+++ b/res/layout/sortlistview_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/selector_item"
     android:gravity="center_vertical"
     android:orientation="vertical" >
 
@@ -23,8 +24,11 @@
         android:gravity="center_vertical"
         android:layout_weight="1.0"
         android:textColor="#336598"
-        android:layout_marginLeft="5dip"
-        android:padding="8dip"
+        android:layout_marginLeft="0.5dip"
+        android:paddingLeft="5dip"
+        android:paddingTop="8dip"
+        android:paddingRight="8dip"
+        android:paddingBottom="8dip"
         android:textSize="16sp"
         android:text="hhhh"/>
 
