--- a/res/layout/test_collect.xml
+++ b/res/layout/test_collect.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -42,9 +42,9 @@
         android:id="@+id/test_collect_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:listSelector="#00000000"
         android:cacheColorHint="@android:color/transparent"
-        android:divider="@null" >
+        android:divider="@null"
+        android:listSelector="#00000000" >
     </ListView>
 
 </LinearLayout>
