--- a/res/layout/test_collect_item.xml
+++ b/res/layout/test_collect_item.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+     android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/shape"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/shape_bg"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:padding="3dp" >
