--- a/res/layout/testing.xml
+++ b/res/layout/testing.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
+        android:id="@+id/testing_relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_alignParentTop="true"
         android:background="@drawable/titlebar" >
 
         <ImageButton
@@ -33,9 +35,9 @@
             android:layout_centerInParent="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:text="测试题共10题"
+            android:text="左右滑动切换题目，共10题"
             android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
         <ImageButton
             android:id="@+id/testing_collect_bn"
@@ -59,7 +61,47 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/testing_relativeLayout1"
+        android:layout_below="@+id/testing_relativeLayout" >
     </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/testing_relativeLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/common_btn" >
+
+        <ImageButton
+            android:id="@+id/testing_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="10dip"
+            android:background="@drawable/test_back_selector" />
+
+        <Button
+            android:id="@+id/testing_computer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@android:color/transparent"
+            android:text="计算器"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+        <ImageButton
+            android:id="@+id/testing_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="10dip"
+            android:background="@drawable/test_next_selector" />
+    </RelativeLayout>
+
+</RelativeLayout>
