--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -14,8 +14,11 @@
     <color name="LightGray">#D3D3D3</color>
     <color name="trans">#50000000</color>
     <color name="red">#fe0202</color>
-    <color name="background">#e5e5e5</color>
     <color name="transparent_background">#50000000</color>
     <color name="Grey">#BEBEBE</color>
+    <color name="layoutBackground">#ffeeeeee</color>
+    <color name="tip">#696969</color>
+    <color name="result">#1E90FF</color>
+     <color name="group">#DCDCDC</color>
 
 </resources>
