--- a/res/drawable-hdpi/shape_bg.xml
+++ b/res/drawable-hdpi/shape_bg.xml
@@ -5,8 +5,8 @@
     <solid android:color="@android:color/white" />
 
     <stroke
-        android:width="1.5dp"
-        android:color="#ffe0e0e0" />
+        android:width="0.5dp"
+        android:color="@color/Grey" />
 
     <corners android:radius="5dp" />
 
