修复界面显示错误BUG

--- a/res/layout/finance.xml
+++ b/res/layout/finance.xml
@@ -79,7 +79,7 @@
                 android:id="@+id/finance_RadioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape"
+                android:background="@drawable/shape_bg"
                 android:orientation="horizontal" >
 
                 <RadioButton
@@ -123,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape" 
+                android:background="@drawable/shape_bg" 
                 >
 
                 <TableRow
@@ -227,7 +227,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
+                android:background="@drawable/shape_bg"
                 android:orientation="horizontal" >
                 <TextView 
                     android:layout_width="wrap_content"
@@ -259,7 +259,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
+                android:background="@drawable/shape_bg"
                 android:padding="8dp"
                 android:text="功能介绍：\n先选择计算类型，然后输入相应的数据就可以进行计算"
                 android:textColor="#1E90FF"
