--- a/res/layout/question.xml
+++ b/res/layout/question.xml
@@ -42,8 +42,7 @@
         android:id="@+id/question_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/shape_bg"
-        android:layout_margin="8dp"
+        android:paddingLeft="8dp"
         android:cacheColorHint="#00000000"
         android:divider="@drawable/shape_line"
         android:dividerHeight="0.75dp" >
