--- a/res/layout/derivative5.xml
+++ b/res/layout/derivative5.xml
@@ -33,7 +33,7 @@
             android:layout_centerInParent="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:text="期权Delta值"
+            android:text="平价套利"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
@@ -84,11 +84,11 @@
                     android:paddingTop="5dp" >
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="现价"
+                        android:text="看涨期权价格"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
@@ -99,11 +99,11 @@
                         android:inputType="number|numberDecimal" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="行权价格"
+                        android:text="看跌期权价格"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
@@ -119,11 +119,11 @@
                     android:layout_height="wrap_content" >
 
                     <TextView
-                        android:layout_width="91dp"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="标的资产价格波动率"
+                        android:text="股票现价"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
@@ -138,7 +138,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="到期期限"
+                        android:text="剩余期限"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
@@ -154,11 +154,11 @@
                     android:layout_height="wrap_content" >
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="年利率"
+                        android:text="行权价格"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
