--- a/res/layout/derivative6.xml
+++ b/res/layout/derivative6.xml
@@ -11,12 +11,12 @@
         android:background="@drawable/titlebar" >
 
         <ImageButton
-            android:id="@+id/Button2_back_bn"
+            android:id="@+id/Button6_back_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
+            android:layout_marginLeft="5dp"
             android:background="@drawable/common_btn_selector" />
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="13dp"
             android:background="@drawable/btn_back" />
 
         <TextView
@@ -33,12 +33,12 @@
             android:layout_centerInParent="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:text="期权到期收益"
+            android:text="内在价值与时间价值"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
         <ImageButton
-            android:id="@+id/Button2_clean_bn"
+            android:id="@+id/Button6_clean_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -66,7 +66,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp" >
 
-            <TextView
+             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="3dp"
@@ -74,7 +74,7 @@
                 android:textColor="@color/tip" />
 
             <RadioGroup
-                android:id="@+id/Button2_radioGroup1"
+                android:id="@+id/Button6_radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_bg"
@@ -82,56 +82,22 @@
                 android:paddingLeft="2dp" >
 
                 <RadioButton
-                    android:id="@+id/Button2_radioButton1"
+                    android:id="@+id/Button6_radioButton1"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="多头"
+                    android:text="认购期权"
                     android:textColor="@android:color/black" />
 
                 <RadioButton
-                    android:id="@+id/Button2_radioButton2"
+                    android:id="@+id/Button6_radioButton2"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="空头"
+                    android:text="认沽期权"
                     android:textColor="@android:color/black" />
             </RadioGroup>
-
-            <RadioGroup
-                android:id="@+id/Button2_radioGroup2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape_bg"
-                android:orientation="vertical"
-                android:paddingLeft="2dp" >
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="认购期权到期收益"
-                    android:textColor="@android:color/black" />
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="认沽期权到期收益"
-                    android:textColor="@android:color/black" />
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="股票到期收益"
-                    android:textColor="@android:color/black" />
-            </RadioGroup>
-
+            
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -145,10 +111,8 @@
                 android:background="@drawable/shape_bg" >
 
                 <TableRow
-                    android:id="@+id/Button2_tableRow1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
                     android:paddingTop="5dp" >
 
                     <TextView
@@ -156,12 +120,12 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="标的资产到期价格"
+                        android:text="标的股价"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/Button2_editText1"
+                        android:id="@+id/Button6_editText1"
                         android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
@@ -171,93 +135,56 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="行权价格"
+                        android:text="行权价"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/Button2_editText2"
-                        android:layout_width="70dp"
+                        android:id="@+id/Button6_editText2"
+                        android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
                 </TableRow>
-
-                <TableRow
-                    android:id="@+id/Button2_tableRow2"
+                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp" >
+                    android:paddingTop="5dp" >
 
                     <TextView
                         android:layout_width="75dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="股票到期价格"
+                        android:text="权利金"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/Button2_editText3"
+                        android:id="@+id/Button6_editText3"
                         android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="5dp"
-                        android:text="股票价格"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/Button2_editText4"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/Button2_tableRow3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:layout_width="75dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="5dp"
-                        android:text="期权权益金"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/Button2_editText5"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
+                    
                 </TableRow>
             </TableLayout>
 
             <TextView
-                android:id="@+id/Button2_out_tv"
+                android:id="@+id/Button6_out_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/shape_bg"
                 android:padding="8dp"
-                android:text="计算结果：\n"
+                android:text="计算结果：\n\n"
                 android:textColor="@color/result"
                 android:textSize="16sp" />
 
             <Button
-                android:id="@+id/Button2_calculate_bt"
+                android:id="@+id/Button6_calculate_bt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="20dp"
                 android:background="@drawable/common_btn_selector"
                 android:padding="8dp"
                 android:text="计算"
