--- a/res/layout/derivative7.xml
+++ b/res/layout/derivative7.xml
@@ -11,12 +11,12 @@
         android:background="@drawable/titlebar" >
 
         <ImageButton
-            android:id="@+id/Button2_back_bn"
+            android:id="@+id/Button7_back_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
+            android:layout_marginLeft="5dp"
             android:background="@drawable/common_btn_selector" />
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="13dp"
             android:background="@drawable/btn_back" />
 
         <TextView
@@ -33,17 +33,17 @@
             android:layout_centerInParent="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:text="期权到期收益"
+            android:text="Delta与杠杆倍数"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
         <ImageButton
-            android:id="@+id/Button2_clean_bn"
+            android:id="@+id/Button7_clean_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
-            android:layout_marginRight="6dip"
+            android:layout_marginRight="7dip"
             android:background="@drawable/common_btn_selector" />
 
         <TextView
@@ -70,73 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="3dp"
-                android:text="请选择："
-                android:textColor="@color/tip" />
-
-            <RadioGroup
-                android:id="@+id/Button2_radioGroup1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_bg"
-                android:orientation="horizontal"
-                android:paddingLeft="2dp" >
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton1"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="多头"
-                    android:textColor="@android:color/black" />
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton2"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="空头"
-                    android:textColor="@android:color/black" />
-            </RadioGroup>
-
-            <RadioGroup
-                android:id="@+id/Button2_radioGroup2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape_bg"
-                android:orientation="vertical"
-                android:paddingLeft="2dp" >
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="认购期权到期收益"
-                    android:textColor="@android:color/black" />
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="认沽期权到期收益"
-                    android:textColor="@android:color/black" />
-
-                <RadioButton
-                    android:id="@+id/Button2_radioButton5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="股票到期收益"
-                    android:textColor="@android:color/black" />
-            </RadioGroup>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="3dp"
-                android:text="请输入数据："
+                android:text="计算Delta值，请输入数据："
                 android:textColor="@color/tip" />
 
             <TableLayout
@@ -145,10 +79,8 @@
                 android:background="@drawable/shape_bg" >
 
                 <TableRow
-                    android:id="@+id/Button2_tableRow1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
                     android:paddingTop="5dp" >
 
                     <TextView
@@ -156,108 +88,121 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="标的资产到期价格"
+                        android:text="标的证券变化量"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/Button2_editText1"
+                        android:id="@+id/Button7_editText1"
                         android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="5dp"
-                        android:text="行权价格"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/Button2_editText2"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/Button2_tableRow2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="5dp" >
 
                     <TextView
                         android:layout_width="75dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:text="股票到期价格"
+                        android:text="期权价格变化量"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/Button2_editText3"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="5dp"
-                        android:text="股票价格"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/Button2_editText4"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/Button2_tableRow3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
+                        android:id="@+id/Button7_editText2"
                         android:layout_width="75dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="5dp"
-                        android:text="期权权益金"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/Button2_editText5"
-                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
                 </TableRow>
             </TableLayout>
 
             <TextView
-                android:id="@+id/Button2_out_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:text="计算杠杆倍数，请输入数据："
+                android:textColor="@color/tip" />
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_bg" >
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp" >
+
+                    <TextView
+                        android:layout_width="75dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
+                        android:text="标的价格"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/Button7_editText3"
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal" />
+
+                    <TextView
+                        android:layout_width="75dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
+                        android:text="期权价格"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/Button7_editText4"
+                        android:layout_width="75dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal" />
+                </TableRow>
+                
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp" >
+
+                    <TextView
+                        android:layout_width="75dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
+                        android:text="Delta"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/Button7_editText5"
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal" />
+
+                </TableRow>
+                
+            </TableLayout>
+
+            <TextView
+                android:id="@+id/Button7_out_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/shape_bg"
                 android:padding="8dp"
-                android:text="计算结果：\n"
+                android:text="计算结果：\n\n"
                 android:textColor="@color/result"
                 android:textSize="16sp" />
 
             <Button
-                android:id="@+id/Button2_calculate_bt"
+                android:id="@+id/Button7_calculate_bt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="20dp"
                 android:background="@drawable/common_btn_selector"
                 android:padding="8dp"
                 android:text="计算"
