--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layoutBackground"
+    android:background="@drawable/b6"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -24,21 +24,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
         android:orientation="vertical"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp" 
-        android:gravity="center_horizontal|center_vertical">
+        android:paddingRight="8dp" >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/shape_bg"
-            android:padding="8dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:text="理念介绍"
-            android:textColor="@android:color/black"
+            android:layout_marginTop="5dp"
+            android:background="@android:color/transparent"
+            android:padding="8dp"
+            android:text="理念介绍\n纵观历史，每次金融危机的发生，背后总有一群疯狂的投资者。可以说，投资者的不成熟导致金融危机的发生的一项非常重要的因素。"
+            android:textColor="#a0000000"
             android:textSize="18sp" />
         <!--
             <Button
@@ -77,8 +77,8 @@
 
         <TableLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_marginTop="10dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
 
             <TableRow
                 android:layout_width="wrap_content"
@@ -88,31 +88,35 @@
                     android:id="@+id/learnButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:drawableTop="@drawable/learn_btn_selector"
                     android:layout_marginRight="20dp"
+                    android:background="@android:color/transparent"
                     android:drawablePadding="-5dp"
+                    android:drawableTop="@drawable/learn_btn_selector"
                     android:text="期权学堂"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/derivativeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:drawableTop="@drawable/calculate_btn_selector"
-                    android:drawablePadding="-5dp"
                     android:layout_marginRight="20dp"
+                    android:background="@android:color/transparent"
+                    android:drawablePadding="-5dp"
+                    android:drawableTop="@drawable/calculate_btn_selector"
                     android:text="期权计算"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp" />
+
                 <Button
                     android:id="@+id/testButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:drawableTop="@drawable/test_btn_selector"
                     android:drawablePadding="-5dp"
+                    android:drawableTop="@drawable/test_btn_selector"
                     android:text="自我测试"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp" />
             </TableRow>
 
@@ -125,31 +129,35 @@
                     android:id="@+id/searchButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:drawableTop="@drawable/noun_btn_selector"
                     android:layout_marginRight="20dp"
+                    android:background="@android:color/transparent"
                     android:drawablePadding="-5dp"
+                    android:drawableTop="@drawable/noun_btn_selector"
                     android:text="名词查询"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/questionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
                     android:background="@android:color/transparent"
-                    android:drawableTop="@drawable/question_btn_selector"
-                     android:layout_marginRight="20dp"
                     android:drawablePadding="-5dp"
+                    android:drawableTop="@drawable/question_btn_selector"
                     android:text="常见问题"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp" />
-                 <Button
+
+                <Button
                     android:id="@+id/aboutButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:drawableTop="@drawable/about_btn_selector"
                     android:drawablePadding="-5dp"
+                    android:drawableTop="@drawable/about_btn_selector"
                     android:text="关于我们"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp" />
             </TableRow>
         </TableLayout>
