--- a/res/layout/test_main.xml
+++ b/res/layout/test_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@color/layoutBackground"
+    android:background="@drawable/b1"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -38,95 +38,94 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TableLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center_vertical"
-            android:orientation="vertical"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp" >
+            android:layout_marginTop="10dp" >
 
-            <TableLayout
+            <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" >
+                android:layout_marginTop="5dp"
+                android:gravity="center_horizontal" >
 
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
+                <Button
+                    android:id="@+id/test_collectButton"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/test_commonbtn_selector"
+                    android:drawablePadding="-15dp"
+                    android:drawableTop="@drawable/test_button4"
+                    android:paddingTop="10dp"
+                    android:text="难题收藏"
+                    android:textSize="14sp" />
 
-                    <Button
-                        android:id="@+id/test_baseButton"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonbtn_selector"
-                        android:drawablePadding="-15dp"
-                        android:drawableTop="@drawable/test_button1"
-                        android:paddingTop="10dp"
-                        android:text="基础测试"
-                        android:textSize="14sp" />
+                <Button
+                    android:id="@+id/test_gradeButton"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/test_commonbtn_selector"
+                    android:drawablePadding="-15dp"
+                    android:drawableTop="@drawable/test_button5"
+                    android:paddingTop="10dp"
+                    android:text="考试成绩"
+                    android:textSize="14sp" />
+            </TableRow>
 
-                    <Button
-                        android:id="@+id/test_advanceButton1"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonbtn_selector"
-                        android:drawablePadding="-15dp"
-                        android:drawableTop="@drawable/test_button1"
-                        android:text="进阶测试1"
-                        android:paddingTop="10dp"
-                        android:textSize="14sp" />
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp" >
 
-                    <Button
-                        android:id="@+id/test_advanceButton2"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonbtn_selector"
-                        android:drawablePadding="-15dp"
-                        android:drawableTop="@drawable/test_button1"
-                        android:text="进阶测试2"
-                        android:paddingTop="10dp"
-                        android:textSize="14sp" />
-                </TableRow>
+                <Button
+                    android:id="@+id/test_baseButton"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/test_commonbtn_selector"
+                    android:drawablePadding="-15dp"
+                    android:drawableTop="@drawable/test_button1"
+                    android:paddingTop="10dp"
+                    android:text="基础测试"
+                    android:textSize="14sp" />
 
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp" >
+                <Button
+                    android:id="@+id/test_advanceButton1"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/test_commonbtn_selector"
+                    android:drawablePadding="-15dp"
+                    android:drawableTop="@drawable/test_button1"
+                    android:paddingTop="10dp"
+                    android:text="进阶测试1"
+                    android:textSize="14sp" />
 
-                    <Button
-                        android:id="@+id/test_collectButton"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonbtn_selector"
-                        android:drawablePadding="-15dp"
-                        android:drawableTop="@drawable/test_button4"
-                        android:text="难题收藏"
-                        android:paddingTop="10dp"
-                        android:textSize="14sp" />
+                <Button
+                    android:id="@+id/test_advanceButton2"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@drawable/test_commonbtn_selector"
+                    android:drawablePadding="-15dp"
+                    android:drawableTop="@drawable/test_button1"
+                    android:paddingTop="10dp"
+                    android:text="进阶测试2"
+                    android:textSize="14sp" />
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
 
-                    <Button
-                        android:id="@+id/test_gradeButton"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonbtn_selector"
-                        android:drawablePadding="-15dp"
-                        android:drawableTop="@drawable/test_button5"
-                        android:text="考试成绩"
-                        android:paddingTop="10dp"
-                        android:textSize="14sp" />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
-    </ScrollView>
-
-</LinearLayout>
+</RelativeLayout>
