强化计算功能

--- a/res/layout/loan.xml
+++ b/res/layout/loan.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+     android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -66,13 +66,12 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp" >
 
-            <TextView
+          <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="还款方式："
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:padding="3dp"
+                android:text="请选择："
+                android:textColor="@color/tip" />
 
             <RadioGroup
                 android:id="@+id/loan_RadioGroup"
@@ -171,23 +170,24 @@
 
             <TextView
                 android:id="@+id/loan_out_tv"
-                android:layout_width="match_parent"
+               android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/shape_bg"
                 android:padding="8dp"
-                android:text="功能介绍：\n先选择还款方式，然后输入相应的数据就可以进行计算"
-                android:textColor="#1E90FF"
-                android:textSize="18sp" />
+                android:text="计算结果：\n"
+                android:textColor="@color/result"
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/loan_calculate_bt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:background="@drawable/common_btn_selector"
                 android:padding="8dp"
                 android:text="计算"
-                android:textColor="@android:color/black"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
