--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -20,5 +20,5 @@
     <color name="tip">#696969</color>
     <color name="result">#1E90FF</color>
      <color name="group">#DCDCDC</color>
-
+     <color name="a">#a0000000</color>
 </resources>
