--- a/res/layout/derivative5.xml
+++ b/res/layout/derivative5.xml
@@ -5,55 +5,11 @@
     android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <com.linyongan.view.TitleView2
+        android:id="@+id/TitleView2"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/titlebar" >
-
-        <ImageButton
-            android:id="@+id/Button5_back_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="13dp"
-            android:background="@drawable/btn_back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:text="平价套利"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <ImageButton
-            android:id="@+id/Button5_clean_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="6dip"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="12dp"
-            android:text="清空" />
-    </RelativeLayout>
+        android:layout_height="45dp" >
+    </com.linyongan.view.TitleView2>
 
     <ScrollView
         android:layout_width="match_parent"
