--- a/res/layout/learn.xml
+++ b/res/layout/learn.xml
@@ -5,38 +5,11 @@
     android:background="@drawable/b4"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <com.linyongan.view.TitleView1
+        android:id="@+id/TitleView1"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/titlebar" >
-
-        <ImageButton
-            android:id="@+id/learn_back_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:background="@drawable/btn_back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:text="期权学堂"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-    </RelativeLayout>
+        android:layout_height="45dp" >
+    </com.linyongan.view.TitleView1>
 
     <!--
      android:groupIndicator="@null" 取消默认图片
@@ -51,8 +24,8 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:cacheColorHint="@null"
-        android:childIndicatorLeft="0dp"
         android:childDivider="@drawable/shape_line"
+        android:childIndicatorLeft="0dp"
         android:divider="@color/Grey"
         android:dividerHeight="0.75dp"
         android:groupIndicator="@null"
