--- a/res/layout/loan.xml
+++ b/res/layout/loan.xml
@@ -2,58 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@color/layoutBackground"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <com.linyongan.view.TitleView2
+        android:id="@+id/TitleView2"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/titlebar" >
-
-        <ImageButton
-            android:id="@+id/loan_back_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:background="@drawable/btn_back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:text="贷款计算"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <ImageButton
-            android:id="@+id/loan_clean_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="6dip"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="12dp"
-            android:text="清空" />
-    </RelativeLayout>
+        android:layout_height="45dp" >
+    </com.linyongan.view.TitleView2>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -66,7 +22,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp" >
 
-          <TextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="3dp"
@@ -112,8 +68,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="8dp"
                         android:layout_gravity="center_vertical"
+                        android:padding="8dp"
                         android:text="贷款本金"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
@@ -127,15 +83,14 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:padding="8dp"
                         android:text="还款月数"
-                        android:layout_gravity="center_vertical"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
@@ -148,14 +103,13 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content" >
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="8dp"
                         android:layout_gravity="center_vertical"
+                        android:padding="8dp"
                         android:text="年利率"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
@@ -170,7 +124,7 @@
 
             <TextView
                 android:id="@+id/loan_out_tv"
-               android:layout_width="match_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/shape_bg"
