--- a/res/layout/question.xml
+++ b/res/layout/question.xml
@@ -5,47 +5,20 @@
     android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <com.linyongan.view.TitleView1
+        android:id="@+id/TitleView1"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/titlebar" >
-
-        <ImageButton
-            android:id="@+id/question_back_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:background="@drawable/btn_back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:text="常见问题"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-    </RelativeLayout>
+        android:layout_height="45dp" >
+    </com.linyongan.view.TitleView1>
 
     <ListView
         android:id="@+id/question_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="8dp"
         android:cacheColorHint="#00000000"
         android:divider="@drawable/shape_line"
-        android:dividerHeight="0.75dp" >
+        android:dividerHeight="0.75dp"
+        android:paddingLeft="8dp" >
     </ListView>
 
 </LinearLayout>
