--- a/res/layout/test_grade.xml
+++ b/res/layout/test_grade.xml
@@ -2,48 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@color/layoutBackground"
+    android:background="@color/layoutBackground"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <com.linyongan.view.TitleView1
+        android:id="@+id/TitleView1"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/titlebar" >
-
-        <ImageButton
-            android:id="@+id/test_grade_back_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:background="@drawable/btn_back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:text="考试成绩"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-    </RelativeLayout>
+        android:layout_height="45dp" >
+    </com.linyongan.view.TitleView1>
 
     <com.linyongan.view.MyListView
         android:id="@+id/test_grade_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:listSelector="#00000000"
         android:cacheColorHint="@android:color/transparent"
-        android:divider="@null" >
+        android:divider="@null"
+        android:listSelector="#00000000" >
     </com.linyongan.view.MyListView>
+
 </LinearLayout>
