--- a/res/layout/test_main.xml
+++ b/res/layout/test_main.xml
@@ -5,38 +5,11 @@
     android:background="@drawable/b3"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <com.linyongan.view.TitleView1
+        android:id="@+id/TitleView1"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/titlebar" >
-
-        <ImageButton
-            android:id="@+id/test_back_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="4dip"
-            android:background="@drawable/common_btn_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:background="@drawable/btn_back" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:text="自我测试"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-    </RelativeLayout>
+        android:layout_height="45dp" >
+    </com.linyongan.view.TitleView1>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,8 +23,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp" >
-
-           
 
             <TableRow
                 android:layout_width="wrap_content"
@@ -93,7 +64,8 @@
                     android:text="进阶测试2"
                     android:textSize="14sp" />
             </TableRow>
-             <TableRow
+
+            <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
